# end2end_cdro

./: .gitignore  AUDIT_AND_UPGRADE_PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  ddro.yaml  e2e_cdro.yaml  mpc.yaml  ppo.yaml  scenario.yaml  static_cdro.yaml
modelica/: README.md  export_fmu.mos
modelica/DemoPlant/: SingleZoneThermal.mo  package.mo
scripts/: eval_all.py  export_fmu.py  make_plots.py  run_single_demo.py  train_e2e.py
src/: runner.py
src/controllers/: base.py  ddro.py  e2e_cdro.py  main_suite.py  mpc.py  ppo_controller.py  static_cdro.py
src/learning/: grad_approx.py  rho_net.py  trainer.py
src/logging_utils/: mlflow_logger.py
src/metrics/: metrics.py  summarize.py
src/optimization/: cvx_utils.py  robust_layer.py
src/plant/: fmu_env.py  grid_cooling_env.py  plant_factory.py  python_env.py
src/plotting/: plots.py
src/scenario/: calm_burst_calm.py  thermal_workload.py
src/utils/: config.py  io.py  seeds.py
tests/: test_cvx_layer.py  test_fmu_env.py  test_python_env.py  test_scenario.py
