[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e2e-cdro-demo"
version = "0.1.0"
description = "End-to-end CDRO demo with Modelica/FMUs and Python fallback"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
